intro and skills blocks created

--- a/index.html
+++ b/index.html
@@ -21,6 +21,61 @@
             </div>
             <img class="navbar__image" src="./images/menu.png" alt="menu-icon">
         </nav>
+    </section>
+
+    <section class="intro">
+        <div class="intro-container">
+            <p class="intro-container__text">Welcome to my website 👋</p>
+            <h1 class="intro-container__heading">A Junior Software Developer based in the UK.</h1>
+            <a class="intro-container__link" href="#">
+                <button>Take a look at my work &#x2935;</button>
+            </a>
+        </div>
+    </section>
+
+    <section class="skills">
+        <h2>Technical Skills</h2>
+        <p class="skills__text">I have expertise in HTML, CSS, Javascript, Python, Linux, SQL, AWS services. Training
+            toward Java, React and Spring</p>
+
+        <div class="skills__icon-with-text">
+            <div>
+                <img src="./images/skills/html.svg" alt="html">
+                <p>HTML5</p>
+            </div>
+            <div>
+                <img src="./images/skills/css.svg" alt="css">
+                <p>CSS3</p>
+            </div>
+            <div>
+                <img src="./images/skills/scss.svg" alt="scss">
+                <p>SCSS</p>
+            </div>
+            <div>
+                <img src="./images/skills/bem.svg" alt="bem">
+                <p>BEM</p>
+            </div>
+            <div>
+                <img src="./images/skills/js.svg" alt="js">
+                <p>JavaScript</p>
+            </div>
+            <div>
+                <img src="./images/skills/git.svg" alt="git">
+                <p>Git</p>
+            </div>
+            <div>
+                <img src="./images/skills/java.svg" alt="java">
+                <p>Java</p>
+            </div>
+            <div>
+                <img src="./images/skills/react.svg" alt="react">
+                <p>React</p>
+            </div>
+            <div>
+                <img src="./images/skills/spring.svg" alt="spring">
+                <p>Spring</p>
+            </div>
+        </div>
 
     </section>
 </body>
