created project and footer blocks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="navbar__list">
                 <a href="#">Home</a>
                 <a href="#">About</a>
-                <a href="#">Projects</a>
+                <a href="#project-heading s">Projects</a>
                 <a class="navbar__list--button" href="#">Get in touch</a>
             </div>
             <img class="navbar__image" src="./images/menu.png" alt="menu-icon">
@@ -76,8 +76,111 @@
                 <p>Spring</p>
             </div>
         </div>
-
     </section>
+
+    <section class="projects">
+        <h2 class="project__text" id="project-heading">My Projects</h2>
+        <div class="project__cards">
+
+            <div class="card">
+                <div class="card__img-container">
+                    <img class="card__img" src="./images/project.svg" alt="project1">
+                </div>
+                <h3>REACT</h3>
+                <h4>Client Project</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                <div class="card__button">
+                    <button class="card__button">Code &lt;/&gt;</button>
+                    <button class="card__button">Preview &lt;/&gt;</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__img-container card__img-container--blue-bg">
+                    <img class="card__img" src="./images/project.svg" alt="project1">
+                </div>
+                <h3>REACT</h3>
+                <h4>Client Project</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                <div class="card__button">
+                    <button class="card__button">Code &lt;/&gt;</button>
+                    <button class="card__button">Preview &lt;/&gt;</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__img-container">
+                    <img class="card__img" src="./images/project.svg" alt="project1">
+                </div>
+                <h3>REACT</h3>
+                <h4>Client Project</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                <div class="card__button">
+                    <button class="card__button">Code &lt;/&gt;</button>
+                    <button class="card__button">Preview &lt;/&gt;</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__img-container">
+                    <img class="card__img" src="./images/project.svg" alt="project1">
+                </div>
+                <h3>REACT</h3>
+                <h4>Client Project</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                <div class="card__button">
+                    <button class="card__button">Code &lt;/&gt;</button>
+                    <button class="card__button">Preview &lt;/&gt;</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__img-container card__img-container--blue-bg">
+                    <img class="card__img" src="./images/project.svg" alt="project1">
+                </div>
+                <h3>REACT</h3>
+                <h4>Client Project</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                <div class="card__button">
+                    <button class="card__button">Code &lt;/&gt;</button>
+                    <button class="card__button">Preview &lt;/&gt;</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card__img-container">
+                    <img class="card__img" src="./images/project.svg" alt="project1">
+                </div>
+                <h3>REACT</h3>
+                <h4>Client Project</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                <div class="card__button">
+                    <button class="card__button">Code &lt;/&gt;</button>
+                    <button class="card__button">Preview &lt;/&gt;</button>
+                </div>
+            </div>
+
+        </div>
+        </main>
+
+        <footer class="footer">
+            <div class="footer__link-icon">
+                <a href="https://github.com/pilahr"><img src="./images/github.svg" alt="github"></a>
+                <a href="https://www.linkedin.com/in/piyapornlahr/"><img src="./images/linkedin.png" alt="linkedin"></a>
+                <a href="./files/Piyaporn Lahr CV.pdf"><img src="./images/cv.svg" alt="cv"></a>
+            </div>
+            <p>piyapornlahr@gmail.com</p>
+        </footer>
+</body>
+
+</html>
+</section>
 </body>
 
 </html>
