created about me section and media query min-width at 768px

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="top-nav">
         <nav class="navbar">
             <h1 class="navbar__heading">&lt;/&gt; Piya Bloggs</h1>
+            <h2 class="navbar__heading2">PiyaBloggs</h2>
             <div class="navbar__list">
                 <a href="#">Home</a>
                 <a href="#">About</a>
@@ -23,160 +24,197 @@
         </nav>
     </section>
 
-    <section class="intro">
-        <div class="intro-container">
-            <p class="intro-container__text">Welcome to my website 👋</p>
-            <h1 class="intro-container__heading">A Junior Software Developer based in the UK.</h1>
-            <a class="intro-container__link" href="#">
-                <button>Take a look at my work &#x2935;</button>
-            </a>
-        </div>
-    </section>
+    <main>
 
-    <section class="skills">
-        <h2>Technical Skills</h2>
-        <p class="skills__text">I have expertise in HTML, CSS, Javascript, Python, Linux, SQL, AWS services. Training
-            toward Java, React and Spring</p>
+        <!-- INTRO -->
+        <section class="intro">
+            <div class="intro-container">
+                <p class="intro-container__text">Welcome to my website 👋</p>
+                <h1 class="intro-container__heading">A Junior Software Developer based in the UK.</h1>
+                <a class="intro-container__link" href="#">
+                    <button>Take a look at my work &#x2935;</button>
+                </a>
+            </div>
+        </section>
 
-        <div class="skills__icon-with-text">
-            <div>
-                <img src="./images/skills/html.svg" alt="html">
-                <p>HTML5</p>
-            </div>
-            <div>
-                <img src="./images/skills/css.svg" alt="css">
-                <p>CSS3</p>
-            </div>
-            <div>
-                <img src="./images/skills/scss.svg" alt="scss">
-                <p>SCSS</p>
-            </div>
-            <div>
-                <img src="./images/skills/bem.svg" alt="bem">
-                <p>BEM</p>
-            </div>
-            <div>
-                <img src="./images/skills/js.svg" alt="js">
-                <p>JavaScript</p>
-            </div>
-            <div>
-                <img src="./images/skills/git.svg" alt="git">
-                <p>Git</p>
-            </div>
-            <div>
-                <img src="./images/skills/java.svg" alt="java">
-                <p>Java</p>
-            </div>
-            <div>
-                <img src="./images/skills/react.svg" alt="react">
-                <p>React</p>
-            </div>
-            <div>
-                <img src="./images/skills/spring.svg" alt="spring">
-                <p>Spring</p>
-            </div>
-        </div>
-    </section>
+        <!-- SKILLS -->
+        <section class="skills">
+            <h2>Technical Skills</h2>
+            <p class="skills__text">I have expertise in HTML, CSS, Javascript, Python, Linux, SQL, AWS services.
+                Training
+                toward Java, React and Spring</p>
 
-    <section class="projects">
-        <h2 class="project__text" id="project-heading">My Projects</h2>
-        <div class="project__cards">
-
-            <div class="card">
-                <div class="card__img-container">
-                    <img class="card__img" src="./images/project.svg" alt="project1">
+            <div class="skills__icon-with-text">
+                <div>
+                    <img src="./images/skills/html.svg" alt="html">
+                    <p>HTML5</p>
                 </div>
-                <h3>REACT</h3>
-                <h4>Client Project</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
-                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
-                <div class="card__button">
-                    <button class="card__button">Code &lt;/&gt;</button>
-                    <button class="card__button">Preview &lt;/&gt;</button>
+                <div>
+                    <img src="./images/skills/css.svg" alt="css">
+                    <p>CSS3</p>
                 </div>
-            </div>
-
-            <div class="card">
-                <div class="card__img-container card__img-container--blue-bg">
-                    <img class="card__img" src="./images/project.svg" alt="project1">
+                <div>
+                    <img src="./images/skills/scss.svg" alt="scss">
+                    <p>SCSS</p>
                 </div>
-                <h3>REACT</h3>
-                <h4>Client Project</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
-                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
-                <div class="card__button">
-                    <button class="card__button">Code &lt;/&gt;</button>
-                    <button class="card__button">Preview &lt;/&gt;</button>
+                <div>
+                    <img src="./images/skills/bem.svg" alt="bem">
+                    <p>BEM</p>
                 </div>
-            </div>
-
-            <div class="card">
-                <div class="card__img-container">
-                    <img class="card__img" src="./images/project.svg" alt="project1">
+                <div>
+                    <img src="./images/skills/js.svg" alt="js">
+                    <p>JavaScript</p>
                 </div>
-                <h3>REACT</h3>
-                <h4>Client Project</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
-                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
-                <div class="card__button">
-                    <button class="card__button">Code &lt;/&gt;</button>
-                    <button class="card__button">Preview &lt;/&gt;</button>
+                <div>
+                    <img src="./images/skills/git.svg" alt="git">
+                    <p>Git</p>
+                </div>
+                <div>
+                    <img src="./images/skills/java.svg" alt="java">
+                    <p>Java</p>
+                </div>
+                <div>
+                    <img src="./images/skills/react.svg" alt="react">
+                    <p>React</p>
+                </div>
+                <div>
+                    <img src="./images/skills/spring.svg" alt="spring">
+                    <p>Spring</p>
                 </div>
             </div>
+        </section>
 
-            <div class="card">
-                <div class="card__img-container">
-                    <img class="card__img" src="./images/project.svg" alt="project1">
+        <!-- PROJECTS -->
+        <section class="projects">
+            <h2 class="projects__text" id="project-heading">My Projects</h2>
+            <div class="projects__cards">
+
+                <div class="card">
+                    <div class="card__img-container">
+                        <img class="card__img" src="./images/project.svg" alt="project1">
+                    </div>
+                    <h3>REACT</h3>
+                    <h4>Client Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                        Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                    <div class="card__button">
+                        <button class="card__button">Code &lt;/&gt;</button>
+                        <button class="card__button">Preview &lt;/&gt;</button>
+                    </div>
                 </div>
-                <h3>REACT</h3>
-                <h4>Client Project</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
-                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
-                <div class="card__button">
-                    <button class="card__button">Code &lt;/&gt;</button>
-                    <button class="card__button">Preview &lt;/&gt;</button>
+
+                <div class="card">
+                    <div class="card__img-container card__img-container--blue-bg">
+                        <img class="card__img" src="./images/project.svg" alt="project1">
+                    </div>
+                    <h3>REACT</h3>
+                    <h4>Client Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                        Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                    <div class="card__button">
+                        <button class="card__button">Code &lt;/&gt;</button>
+                        <button class="card__button">Preview &lt;/&gt;</button>
+                    </div>
                 </div>
+
+                <div class="card">
+                    <div class="card__img-container">
+                        <img class="card__img" src="./images/project.svg" alt="project1">
+                    </div>
+                    <h3>REACT</h3>
+                    <h4>Client Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                        Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                    <div class="card__button">
+                        <button class="card__button">Code &lt;/&gt;</button>
+                        <button class="card__button">Preview &lt;/&gt;</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card__img-container">
+                        <img class="card__img" src="./images/project.svg" alt="project1">
+                    </div>
+                    <h3>REACT</h3>
+                    <h4>Client Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                        Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                    <div class="card__button">
+                        <button class="card__button">Code &lt;/&gt;</button>
+                        <button class="card__button">Preview &lt;/&gt;</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card__img-container card__img-container--blue-bg">
+                        <img class="card__img" src="./images/project.svg" alt="project1">
+                    </div>
+                    <h3>REACT</h3>
+                    <h4>Client Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                        Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                    <div class="card__button">
+                        <button class="card__button">Code &lt;/&gt;</button>
+                        <button class="card__button">Preview &lt;/&gt;</button>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card__img-container">
+                        <img class="card__img" src="./images/project.svg" alt="project1">
+                    </div>
+                    <h3>REACT</h3>
+                    <h4>Client Project</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
+                        Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
+                    <div class="card__button">
+                        <button class="card__button">Code &lt;/&gt;</button>
+                        <button class="card__button">Preview &lt;/&gt;</button>
+                    </div>
+                </div>
+
             </div>
 
-            <div class="card">
-                <div class="card__img-container card__img-container--blue-bg">
-                    <img class="card__img" src="./images/project.svg" alt="project1">
+            <!-- ABOUT ME -->
+            <section class="about-me">
+                <h2>About Me</h2>
+                <img src="./images/piya.jpeg" alt="my-image">
+                <div class="about-me__text">
+                    <p>Hi, I'm Piyaporn Lahr! <br>My first experience that I know about programming and coding was in
+                        high
+                        school. I remembered choosing the computer club just because of my interest in playing computer
+                        games that time. What I was taught in the class was a basic programming. Back then I enjoyed it
+                        and
+                        thought how cool it would be to know how to code or create a programme. However as a young asian
+                        girl, it was
+                        difficult to choose to do something that is completely unknown to the family, so I ended up
+                        choosing
+                        and becoming a registered nurse in Thailand since 2012 then moved to London in 2019.
+                    </p>
+                    <p>Having worked in health care for ten years, I am reliable, experienced in working
+                        with others to achieve a
+                        certain objective on time and with excellence. I am a fast learner with a desire to learn. With
+                        my
+                        passion in IT, I decided to give myself the opportunity to step into it by attending
+                        AWS Re/start programme and now I undertake a 12-week intensive coding, programming and software
+                        development training at _nology.
+                    </p>
                 </div>
-                <h3>REACT</h3>
-                <h4>Client Project</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
-                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
-                <div class="card__button">
-                    <button class="card__button">Code &lt;/&gt;</button>
-                    <button class="card__button">Preview &lt;/&gt;</button>
-                </div>
-            </div>
+            </section>
 
-            <div class="card">
-                <div class="card__img-container">
-                    <img class="card__img" src="./images/project.svg" alt="project1">
-                </div>
-                <h3>REACT</h3>
-                <h4>Client Project</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ipsa non? Aperiam, ut?
-                    Obcaecati alias amet velit laborum? Minus fugit vero voluptas quisquam, ullam maxime.</p>
-                <div class="card__button">
-                    <button class="card__button">Code &lt;/&gt;</button>
-                    <button class="card__button">Preview &lt;/&gt;</button>
-                </div>
-            </div>
-
-        </div>
-        </main>
-
-        <footer class="footer">
-            <div class="footer__link-icon">
-                <a href="https://github.com/pilahr"><img src="./images/github.svg" alt="github"></a>
-                <a href="https://www.linkedin.com/in/piyapornlahr/"><img src="./images/linkedin.png" alt="linkedin"></a>
-                <a href="./files/Piyaporn Lahr CV.pdf"><img src="./images/cv.svg" alt="cv"></a>
-            </div>
-            <p>piyapornlahr@gmail.com</p>
-        </footer>
+            <!-- FOOTER -->
+            <section>
+                <footer class="footer">
+                    <div class="footer__link-icon">
+                        <a href="https://github.com/pilahr"><img src="./images/github.svg" alt="github"></a>
+                        <a href="https://www.linkedin.com/in/piyapornlahr/"><img src="./images/linkedin.png"
+                                alt="linkedin"></a>
+                        <a href="./files/Piyaporn Lahr CV.pdf"><img src="./images/cv.svg" alt="cv"></a>
+                    </div>
+                    <p>piyapornlahr@gmail.com</p>
+                </footer>
+            </section>
+    </main>
 </body>
 
 </html>
