adjusted intro part at media query min-width 1024px

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <a class="intro-container__link" href="#">
                     <button>Take a look at my work &#x2935;</button>
                 </a>
+                <img src="./images/piya.jpeg" alt="my-image">
             </div>
         </section>
 
