adjusted about me block to be able to work for responsive design at min-width 1024px

--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 
             <!-- ABOUT ME -->
             <section class="about-me">
-                <h2>About Me</h2>
-                <img src="./images/piya.jpeg" alt="my-image">
+                <h2 class="about-me__heading">About Me</h2>
+                <img class="about-me__my-image" src="./images/piya.jpeg" alt="my-image">
                 <div class="about-me__text">
                     <p>Hi, I'm Piyaporn Lahr! <br>My first experience that I know about programming and coding was in
                         high
@@ -201,6 +201,7 @@
                         development training at _nology.
                     </p>
                 </div>
+                <img class="about-me__laptop-girl" src="./images/girl-cartoon.png" alt="laptop-girl">
             </section>
 
             <!-- FOOTER -->
