inside links added

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <h2 class="navbar__heading2">PiyaBloggs</h2>
             <div class="navbar__list">
                 <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#project-heading s">Projects</a>
+                <a href="#about-me">About</a>
+                <a href="#project-heading">Projects</a>
                 <a class="navbar__list--button" href="#">Get in touch</a>
             </div>
             <img class="navbar__image" src="./images/menu.png" alt="menu-icon">
@@ -31,7 +31,7 @@
             <div class="intro-container">
                 <p class="intro-container__text">Welcome to my website 👋</p>
                 <h1 class="intro-container__heading">A Junior Software Developer based in the UK.</h1>
-                <a class="intro-container__link" href="#">
+                <a class="intro-container__link" href="#project-heading">
                     <button>Take a look at my work &#x2935;</button>
                 </a>
                 <img src="./images/piya.jpeg" alt="my-image">
@@ -177,7 +177,7 @@
             </div>
 
             <!-- ABOUT ME -->
-            <section class="about-me">
+            <section class="about-me" id="about-me">
                 <h2 class="about-me__heading">About Me</h2>
                 <img class="about-me__my-image" src="./images/piya.jpeg" alt="my-image">
                 <div class="about-me__text">
