codes cleaned up

--- a/index.html
+++ b/index.html
@@ -255,18 +255,10 @@
                         </ul>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
             </section>
 
 
-
+            <!-- JavaScript for a collapsible bars -->
             <script>
                 var coll = document.getElementsByClassName("experience__collapsible");
                 var i;
@@ -296,7 +288,6 @@
                     <p>piyapornlahr@gmail.com</p>
                 </footer>
             </section>
-
 
     </main>
 </body>
