Punk API project added

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <!-- SKILLS -->
         <section class="skills">
             <h2>Technical Skills</h2>
-            <p class="skills__text">I have expertise in HTML, CSS, Javascript, Python, Linux, SQL, AWS services.
+            <p class="skills__text">I have a skills in HTML, CSS, Javascript, Python, Linux, SQL, AWS services, React.
                 Training
-                toward Java, React and Spring</p>
+                toward Java and Spring</p>
 
             <div class="skills__icon-with-text">
                 <div>
