--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#">Home</a>
                 <a href="#about-me">About</a>
                 <a href="#project-heading">Projects</a>
-                <a class="navbar__list--button" href="#">Get in touch</a>
+                <a href="#footer" class="navbar__list--button" href="#">Get in touch</a>
             </div>
             <img class="navbar__image" src="./images/menu.png" alt="menu-icon">
         </nav>
@@ -30,7 +30,7 @@
         <section class="intro">
             <div class="intro-container">
                 <p class="intro-container__text">Welcome to my website 👋</p>
-                <h1 class="intro-container__heading">A Junior Software Developer based in the UK.</h1>
+                <h1 class="intro-container__heading">A Junior Software Developer based in the UK/ London</h1>
                 <a class="intro-container__link" href="#project-heading">
                     <button>Take a look at my work &#x2935;</button>
                 </a>
@@ -260,7 +260,7 @@
 
             <!-- FOOTER -->
             <section>
-                <footer class="footer">
+                <footer class="footer" id="footer">
                     <div class="footer__link-icon">
                         <a href="https://github.com/pilahr"><img src="./images/github.svg" alt="github"></a>
                         <a href="https://www.linkedin.com/in/piyapornlahr/"><img src="./images/linkedin.png"
