Added more of skills icons and text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="intro">
             <div class="intro-container">
                 <p class="intro-container__text">Welcome to my website 👋</p>
-                <h1 class="intro-container__heading">A Junior Software Developer based in the UK/ London</h1>
+                <h1 class="intro-container__heading">A Junior Software Developer based in the London</h1>
                 <a class="intro-container__link" href="#project-heading">
                     <button>Take a look at my work &#x2935;</button>
                 </a>
@@ -41,9 +41,8 @@
         <!-- SKILLS -->
         <section class="skills">
             <h2>Technical Skills</h2>
-            <p class="skills__text">I have a skills in HTML, CSS, Javascript, Python, Linux, SQL, AWS services, React.
-                Training
-                toward Java and Spring</p>
+            <p class="skills__text">I have a skills in HTML, CSS, Javascript, Python, Linux, SQL, AWS services, React,
+                Java, Spring, Spring Boot</p>
 
             <div class="skills__icon-with-text">
                 <div>
@@ -81,6 +80,22 @@
                 <div>
                     <img src="./images/skills/spring.svg" alt="spring">
                     <p>Spring</p>
+                </div>
+                <div>
+                    <img src="./images/skills/spring-boot.svg" alt="spring">
+                    <p>Spring Boot</p>
+                </div>
+                <div>
+                    <img src="./images/skills/python.svg" alt="spring">
+                    <p>Python</p>
+                </div>
+                <div>
+                    <img src="./images/skills/sql.png" alt="spring">
+                    <p>SQL</p>
+                </div>
+                <div>
+                    <img src="./images/skills/aws.png" alt="spring">
+                    <p>AWS</p>
                 </div>
             </div>
         </section>
