Edited text in index.html

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
                     <button class="experience__collapsible">Trainee Software Developer @_Nology </button>
                     <div class="experience__content">
-                        <p>Undertaking 12 weeks of full-time training for Software development. Focuses on key practices
+                        <p>Undertook 12 weeks of full-time training for Software development. Focuses on key practices
                             and methodologies of both front-end and back-end development including web fundamental,
                             HTML, CSS, JavaScript, Java Programming, Agile and Testing, Databases and Server-side
                             Programming.</p>
